# APC_Temp_fetch

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
APC_Temp_fetch/: base.py  cli.py  cs121.py  cs141.py  frmnc.py  frmnc666.py  gden_nt07.py  old.py
debian/: changelog  control  copyright  postinst  prerm  rules
src/APC_Temp_fetch/: __init__.py  base.py  cli.py  cs121.py  cs141.py  frmnc.py  gden_nt07.py  old.py
