[metadata]
name = APC_Temp_fetch
version = 0.0.0
author = kzs, zseri
description = APC UPS current temperature fetchers
license = Apache-2.0
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
url = https://github.com/YZITE/APC_Temp_fetch

[options]
package_dir =
  = src
packages = find:
python_requires = >= 3.7
install_requires =
  requests
  urllib3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  APC_Tempf=APC_Temp_fetch.cli:main_one
  APC_Tempstfe=APC_Temp_fetch.cli:main_list
