[metadata]
name = APC_Temp_fetch
version = 0.0.0
author = kzs, zseri
description = APC UPS current temperature fetchers
license = Apache-2.0
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
url = https://github.com/YZITE/APC_Temp_fetch

[options]
zip_safe = False
package_dir =
  = src
packages = find:
python_requires = >= 3.7
install_requires =
  requests

[options.packages.find]
where = src

[options.package_data]
APC_Temp_fetch = py.typed

[options.entry_points]
console_scripts =
  APC_Tempf=APC_Temp_fetch.cli:main_one
  APC_Tempstfe=APC_Temp_fetch.cli:main_list
